Test/git-issues/git-issue-327cir.dfy.expect
git-issue-327cir.dfy(5,7): Error: module definition contains a cycle (note: parent modules implicitly depend on submodules): A -> B -> C -> B
1 resolution/type errors detected in git-issue-327cir.dfy
